--- a/css/style.css
+++ b/css/style.css
@@ -1247,3 +1247,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   -webkit-animation-name: rollIn;
   animation-name: rollIn;
 } */
+.portTag{
+  font-family: serif;
+    color: brown;
+    font-weight: bold;
+}
